--- a/.github/workflows/Forward.yml
+++ b/.github/workflows/Forward.yml
@@ -3,7 +3,7 @@ name : Forward
 
 on :
   workflow_run :
-    workflows : [ 'push', 'push2' ]
+    workflows : [ 'pushOne', 'pushTwo' ]
     types : [ completed ]
 
 jobs :
