--- a/.github/workflows/PushOne.yml
+++ b/.github/workflows/PushOne.yml
@@ -6,6 +6,7 @@ on: [ workflow_call, push ]
 jobs :
 
   post :
+    if: "startsWith( github.event.head_commit.message, '[build]' )"
     runs-on : ubuntu-latest
     steps :
       - run : exit 0
