--- a/.github/workflows/PushOne.yml
+++ b/.github/workflows/PushOne.yml
@@ -1,14 +1,20 @@
 
 name : push
 
-on :
-  push:
-    branches : [ alpha ]
+on:
+  workflow_call:
+    inputs:
+      commit:
+        required: true
+        type: string
 
 jobs :
 
-  post :
+  build :
     runs-on : ubuntu-latest
     steps :
-      - run : exit 0
+      - run : echo one
+      - name: conditional
+        if: ${{ inputs.commit != 'false' }}
+        run: echo conditional
 
