--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -11,7 +11,7 @@ jobs :
       - uses: actions/checkout@v2
       - run : cargo build --release
       - run : mkdir out
-      - run : cp target/release/test out/test
+      - run : copy target/release/test.exe out/test
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
