--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -37,6 +37,8 @@ jobs :
     runs-on : ubuntu-latest
     steps :
       - uses: actions/checkout@v2
+      with :
+        fetch-depth: 5
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
