--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -28,6 +28,7 @@ jobs :
 
       - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=${{ secrets.PRIVATE_TOKEN }}"; }; f'
       - run : ls ..
+      - run : ls
       - run : repo .agree dst:./!master src:../Test!master srcDirPath:'out' dstDirPath:'out' message:__sync__
       - run : git push
 
