--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -22,14 +22,12 @@ jobs :
       - run : git add out/
       - run : git commit -m 'Automated, linux'
 
-      - run : cd ../../
-      - run : git clone https://github.com/dmvict/test-push.git test-push
-      - run : cd test-push
+      - run : git clone https://github.com/dmvict/test-push.git ../test-push
 
       - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=${{ secrets.PRIVATE_TOKEN }}"; }; f'
       - run : ls ..
       - run : ls
-      - run : repo .agree dst:./!master src:../Test!master srcDirPath:'out' dstDirPath:'out' message:__sync__
+      - run : repo .agree dst:../test-push/!master src:../Test!master srcDirPath:'out' dstDirPath:'out' message:__sync__
       - run : git push
 
 
