--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -27,7 +27,7 @@ jobs :
       - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=${{ secrets.PRIVATE_TOKEN }}"; }; f'
       - run : ls ..
       - run : ls
-      - run : repo .agree dst:../test-push/!master src:../Test#HEAD srcDirPath:'out' dstDirPath:'out' message:__sync__
+      - run : repo .agree dst:../test-push/!master src:../Test/out dstDirPath:'out' message:__sync__
       - run : git push
 
 
