--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -25,7 +25,7 @@ jobs :
       - run : cp target/release/test ../test-push/out/linux/test
       - run : git -C ../test-push/ add .
       - run : git -C ../test-push/ commit -m 'Automated, linux'
-      - run : git -C ../test-push/ push https://$PRIVATE_TOKEN@github.com/dmvict/test-push.git
+      - run : git -C ../test-push/ push https://dmvict:$PRIVATE_TOKEN@github.com/dmvict/test-push.git
 
 
       # - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=${{ secrets.PRIVATE_TOKEN }}"; }; f'
