--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -25,8 +25,12 @@ jobs :
       - run : cp target/release/test ../test-push/out/linux/test
       - run : git -C ../test-push/ add .
       - run : git -C ../test-push/ commit -m 'Automated, linux'
-      - run : git -C ../test-push/ push https://dmvict:$PRIVATE_TOKEN@github.com/dmvict/test-push.git
-
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PRIVATE_TOKEN }}
+          branch: master
+          directory: ../test-push/
 
       # - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=${{ secrets.PRIVATE_TOKEN }}"; }; f'
       # - run : ls ..
