--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -18,18 +18,18 @@ jobs :
       - run : cargo build --release
 
       # - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=$PRIVATE_TOKEN"; }; f'
-      - run : git clone https://github.com/dmvict/test-push.git ../test-push
-      - run : rm -rf ../test-push/out
-      - run : mkdir -p ../test-push/out/linux
-      - run : cp target/release/test ../test-push/out/linux/test
-      - run : git -C ../test-push/ add .
-      - run : git -C ../test-push/ commit -m 'Automated, linux'
+      - run : git clone https://github.com/dmvict/test-push.git .test-push
+      - run : rm -rf .test-push/out
+      - run : mkdir -p .test-push/out/linux
+      - run : cp target/release/test .test-push/out/linux/test
+      - run : git -C .test-push/ add .
+      - run : git -C .test-push/ commit -m 'Automated, linux'
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PRIVATE_TOKEN }}
           branch: master
-          directory: ../test-push/
+          directory: .test-push/
 
       # - run : git config credential.helper '!f(){ echo "username=dmvict" && echo "password=${{ secrets.PRIVATE_TOKEN }}"; }; f'
       # - run : ls ..
