--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -6,17 +6,7 @@ on: [ push ]
 jobs :
 
   linux :
-    if : "!contains( github.event.head_commit.message, 'Automated' )"
-    runs-on : ubuntu-latest
-    steps :
-      - uses: actions/checkout@v2
-      - run : cargo build --release
-      - name: Upload
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux
-          path: target/release/test
-          retention-days: 1
+    uses : dmvict/Test/.github/workflows/Linux.yml@master
 
   macos :
     if : "!contains( github.event.head_commit.message, 'Automated' )"
