--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -7,14 +7,21 @@ jobs :
 
   build :
     if : "!contains( github.event.head_commit.message, 'Automated' )"
-    runs-on : ubuntu-latest
+    strategy :
+      fail-fast : false
+      matrix :
+        os : [ ubuntu, windows, macos ]
+    runs-on: ${{ matrix.os }}-latest
     steps :
       - uses: actions/checkout@v2
       - run : cargo build --release
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
-          name: linux
-          path: target/release/test
+          name: ${{ matrix.os }}
+          path: |
+            target/release/test
+            target/release/test.dll
+            target/release/test.exe
           retention-days: 1
 
