--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -26,7 +26,7 @@ jobs :
           name: windows
           path: out/windows_release
       - name: Pushes to another repository
-        uses: cpina/github-action-push-to-another-repository@main
+        uses: cpina/github-action-push-to-another-repository@v1.3
         env:
           API_TOKEN_GITHUB: ${{ secrets.PRIVATE_TOKEN }}
         with:
