--- a/.github/workflows/Pr.yml
+++ b/.github/workflows/Pr.yml
@@ -9,12 +9,10 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
-      - name: Open PR
-        uses: gha-utilities/init-pull-request@v0.3.1
-        with:
-          verbose: true
-          pull_request_token: ${{ secrets.PRIVATE_TOKEN }}
-          head: master
-          base: alpha
-          title: 'READY : Forward last changes'
-
+      - name: Open Pr
+        uses: vsoch/pull-request-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.PRIVATE_TOKEN }}
+          PULL_REQUEST_BRANCH: alpha
+          PULL_REQUEST_TITLE: 'READY : Forward changes from beta to master'
+          PASS_IF_EXISTS: true
