--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -13,5 +13,6 @@ jobs :
   build :
     runs-on: ubuntu-latest
     steps :
-      - run : cargo ${{ inputs.debug == true }}
+      - run : echo ${{ inputs.debug == true }}
+      - run : echo ${{ inputs.debug == false }}
 
