--- a/.github/workflows/Pr.yml
+++ b/.github/workflows/Pr.yml
@@ -14,10 +14,28 @@ jobs:
       shouldRun: ${{ steps.run.outputs.shouldRun }}
     steps :
       - name: List commits on the pull request
+        if: ${{ secrets.PRIVATE_GITHUB_TOKEN != '' }}
         run: |
           response=$(curl --request GET \
           --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
           --header 'Authorization: token ${{ secrets.PRIVATE_GITHUB_TOKEN }}' \
+          --header 'Accept: application/vnd.github.v3+json' \
+          --header 'Content-Type: application/json')
+          echo $response > response.json
+      - name: List commits on the pull request
+        if: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
+        run: |
+          response=$(curl --request GET \
+          --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
+          --header 'Authorization: token ${{ secrets.PRIVATE_GITHUB_TOKEN }}' \
+          --header 'Accept: application/vnd.github.v3+json' \
+          --header 'Content-Type: application/json')
+          echo $response > response.json
+      - name: List commits on the pull request
+        if: ${{ secrets.PRIVATE_GITHUB_TOKEN == '' }}
+        run: |
+          response=$(curl --request GET \
+          --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
           --header 'Accept: application/vnd.github.v3+json' \
           --header 'Content-Type: application/json')
           echo $response > response.json
