--- a/.github/workflows/Pr.yml
+++ b/.github/workflows/Pr.yml
@@ -1,7 +1,7 @@
 
 name: Conditional
 
-on : [ pull_request ]
+on : [ pull_request, push ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,31 +14,30 @@ jobs:
       shouldRun: ${{ steps.run.outputs.shouldRun }}
     steps :
       - name: List commits on the pull request
-        if: ${{ secrets.PRIVATE_GITHUB_TOKEN != '' }}
         run: |
           response=$(curl --request GET \
           --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
-          --header 'Authorization: token ${{ secrets.PRIVATE_GITHUB_TOKEN }}' \
+          --header 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
           --header 'Accept: application/vnd.github.v3+json' \
           --header 'Content-Type: application/json')
           echo $response > response.json
-      - name: List commits on the pull request
-        if: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
-        run: |
-          response=$(curl --request GET \
-          --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
-          --header 'Authorization: token ${{ secrets.PRIVATE_GITHUB_TOKEN }}' \
-          --header 'Accept: application/vnd.github.v3+json' \
-          --header 'Content-Type: application/json')
-          echo $response > response.json
-      - name: List commits on the pull request
-        if: ${{ secrets.PRIVATE_GITHUB_TOKEN == '' }}
-        run: |
-          response=$(curl --request GET \
-          --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
-          --header 'Accept: application/vnd.github.v3+json' \
-          --header 'Content-Type: application/json')
-          echo $response > response.json
+      # - name: List commits on the pull request
+      #   if: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
+      #   run: |
+      #     response=$(curl --request GET \
+      #     --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
+      #     --header 'Authorization: token ${{ secrets.PRIVATE_GITHUB_TOKEN }}' \
+      #     --header 'Accept: application/vnd.github.v3+json' \
+      #     --header 'Content-Type: application/json')
+      #     echo $response > response.json
+      # - name: List commits on the pull request
+      #   if: ${{ secrets.PRIVATE_GITHUB_TOKEN == '' }}
+      #   run: |
+      #     response=$(curl --request GET \
+      #     --url 'https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits' \
+      #     --header 'Accept: application/vnd.github.v3+json' \
+      #     --header 'Content-Type: application/json')
+      #     echo $response > response.json
       - name: Get latest commit
         id: message
         run: |
