--- a/.github/workflows/ArtifactsWithCommon.yml
+++ b/.github/workflows/ArtifactsWithCommon.yml
@@ -10,21 +10,26 @@ jobs :
 
   last :
     needs: [ build ]
+    if: startsWith( github.ref, 'refs/tags/v' )
     runs-on : ubuntu-latest
     steps :
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
           name: ubuntu
-          path: out/linux_release
+          path: out/${{ github.ref }}/linux_release
       - uses: actions/download-artifact@v2
         with:
           name: macos
-          path: out/macos_release
+          path: out/${{ github.ref }}/macos_release
       - uses: actions/download-artifact@v2
         with:
           name: windows
-          path: out/windows_release
+          path: out/${{ github.ref }}/windows_release
+      - run: rm -rf out/*
+      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref }}/linux_release/test)' >> ${{ github.ref }}.md
+      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref }}/macos_release/test)' >> ${{ github.ref }}.md
+      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref }}/windows_release)' >> ${{ github.ref }}.md
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@v1.3
         env:
