Fix sequence, add committing

--- a/.github/workflows/ArtifactsWithCommon.yml
+++ b/.github/workflows/ArtifactsWithCommon.yml
@@ -26,10 +26,6 @@ jobs :
         with:
           name: windows
           path: out/${{ github.ref_name }}/windows_release
-      - run: rm -rf out/*
-      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/linux_release/test)' >> ${{ github.ref_name }}.md
-      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/macos_release/test)' >> ${{ github.ref_name }}.md
-      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/windows_release)' >> ${{ github.ref_name }}.md
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@v1.3
         env:
@@ -41,4 +37,13 @@ jobs :
           destination-repository-name: 'test-push'
           user-email: dm.vict.kr@gmail.com
           target-branch: master
+      - run: rm -rf out/*
+      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/linux_release/test)' >> ${{ github.ref_name }}.md
+      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/macos_release/test)' >> ${{ github.ref_name }}.md
+      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/windows_release)' >> ${{ github.ref_name }}.md
+      - uses: quizlet/commit-changes@v0.2.0
+        with:
+          token: ${{ secrets.PRIVATE_TOKEN }}
+          message: Automated commit
+          glob-patterns: out/
 
