--- a/.github/workflows/ArtifactsWithCommon.yml
+++ b/.github/workflows/ArtifactsWithCommon.yml
@@ -38,9 +38,9 @@ jobs :
           user-email: dm.vict.kr@gmail.com
           target-branch: master
       - run: rm -rf out/*
-      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/linux_release/test)' >> ${{ github.ref_name }}.md
-      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/macos_release/test)' >> ${{ github.ref_name }}.md
-      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/windows_release)' >> ${{ github.ref_name }}.md
+      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/linux_release/test)' >> out/${{ github.ref_name }}.md
+      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/macos_release/test)' >> out/${{ github.ref_name }}.md
+      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/windows_release)' >> out/${{ github.ref_name }}.md
       - uses: quizlet/commit-changes@v0.2.0
         with:
           token: ${{ secrets.PRIVATE_TOKEN }}
